2010-05-19  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (writeSymbol): If the output should be readable,
	write both prefix and uri.

2010-03-17  Per Bothner  <per@bothner.com>

	* CompileArith.java (inlineDiv): Fix thinko.

2010-02-24  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (getNamedPart): Don't coerce Type to ClassTYpe,
	since it might fail in the case of an ArrayType, for example.
	This fixes Savannah bug #28957 "exception in inliner".

2009-10-19  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java (inlineApplyToArgs): Use getRealType.
	This allows optimizing (v i) where v is a LangObjType.vectorType.

2009-10-18  Per Bothner  <per@bothner.com>

	* BitwiseOp.java: New class, extends ArithOp.  (Re-)implements
	bitwise-ior, bitwise-arithmetic-shift, etc.
	* Makefile.am: Update accordingly.
	* CompileArith.java: Optimize BitwiseOp procedures.
	* ArithOp.java (ADD, SUB, ...): New constants, some from CompileArith.
	* CompileArith.java: Update to use static import of ADD/....

2009-10-12  Per Bothner  <per@bothner.com>

	* NumberCompare.java (getReturnType): Change to Type.booleanType.

2009-10-11  Per Bothner  <per@bothner.com>

	* CompileArith.java (inline): Do inlineIfConstant after we've adjusted
	the result type, so the former can make use of the latter.
	Also set and adjust return type for unary calls, not just binary.

2009-10-03  Per Bothner  <per@bothner.com>

	* CompileArith.java (compile): 	If target is float/double and args
	are int/long we still want to use int/long arithmetic and then
	convert to float/double rather than vice versa.
	Most important for quotient/remainder operations.
	Also some other optimization tweaks for division.

2009-10-01  Per Bothner  <per@bothner.com>

	* CompileArith.java (inRange): Make public - used by Invoke.

2009-09-30  Per Bothner  <per@bothner.com>

	* Arithmetic.java (typeDFloNum): Use LangObjType.dflonumType.

	* CompileArith.java (getReturnKind): Try again ...
